<resources>
    <string name="app_name">MOV</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui \n film yang sedang tampil</string>
    <string name="presale">Presale</string>
    <string name="presale_desc">Tidak khawatir ketinggalan \n update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk \n transaksi tiket nonton</string>
    <string name="memulai">Memulai</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Welcome,</string>
    <string name="simpan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="nowplaying">NOW PLAYING</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="storyboard">Storyboard</string>
    <string name="who_played">Who\'s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bisokop">LAYAR BIOSKOP</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="booked">Booked</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="items">Items</string>
    <string name="total_harus_dibayar">Total Harus Dibayar</string>
    <string name="ewallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
</resources>
